Setup rspec tests for project

--- a/.env_sample
+++ b/.env_sample
@@ -1,4 +1,5 @@
 DATABASE_URL=postgres://localhost/sinatra_rest_api
+TEST_DATABASE_URL=postgres://localhost/sinatra_rest_api_test
 POOL_SIZE=5
 RACK_ENV=development
 SECRET_KEY=your_secret_key
