--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,11 @@ cache: bundler
 rvm:
   - 2.6.3
 before_install: gem install bundler -v 2.1.2
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database sinatra_rest_api_test;' -U postgres
+  - cp .env.travis .env
 script:
-  - createdb sinatra_rest_api_test
   - rake db:test:migrate
   - rspec spec
