--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ language: ruby
 cache: bundler
 rvm:
   - 2.6.3
-before_install: gem install bundler -v 2.1.2
+before_install:
+  - gem install bundler -v 2.1.2
+  - bundle install
 services:
   - postgresql
 before_script:
