--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ services:
 
 before_script:
   - psql -c 'create database sinatra_rest_api_test;' -U postgres
-  - cp .env.travis .env
+  - cp .env.sample .env
   
 script:
   - rake db:test:migrate
